--- a/src/app/addresses/address-create/address-create.component.html
+++ b/src/app/addresses/address-create/address-create.component.html
@@ -1,1 +1,47 @@
-<p>address-create works!</p>
+<div class="container">
+    <form>
+        <mat-form-field>
+            <mat-label>Register Number</mat-label>
+            <input matInput placeholder="Register Number">
+        </mat-form-field>
+        <mat-form-field>
+            <mat-label>City</mat-label>
+            <input matInput placeholder="City">
+        </mat-form-field>
+        <mat-form-field>
+            <mat-label>Address</mat-label>
+            <input matInput placeholder="Address">
+        </mat-form-field>
+        <mat-form-field>
+            <mat-label>Floors</mat-label>
+            <input matInput placeholder="Floors">
+        </mat-form-field>
+        <mat-form-field>
+            <mat-label>How many elevators?</mat-label>
+            <input matInput placeholder="How many elevators?">
+        </mat-form-field>
+    </form>
+</div>
+<div class="container">
+    <form method="POST" action="add">
+        <div class="form-group">
+            <label>Type Elevator</label>
+            <select name="typeElevator">
+
+            </select>
+        </div>
+        <div class="form-group">
+            <label>Ground Floor</label>
+            <input type="checkbox" class="form-control" name="gfloor" id="gfloor" unchecked>
+        </div>
+        <div class="form-group">
+            <label>Basement</label>
+            <input type="checkbox" class="form-control" name="basement" id="basement">
+        </div>
+        <div class="form-group">
+            <label>Is Active?</label>
+            <input type="checkbox" class="form-control" name="isActive" id="isActive">
+        </div>
+        <button type="submit" class="btn btn-default">Submit</button>
+    </form>
+</div>
