--- a/src/app/addresses/address-create/address-create.component.html
+++ b/src/app/addresses/address-create/address-create.component.html
@@ -20,9 +20,15 @@
             <mat-label>How many elevators?</mat-label>
             <input matInput placeholder="How many elevators?">
         </mat-form-field>
+        <mat-form-field>
+            <mat-label>Type Elevator</mat-label>
+            <mat-select >
+                <mat-option *ngFor="let elevator of elevators" [value]="elevator.type">{{elevator.type}}</mat-option>
+            </mat-select>
+        </mat-form-field>
     </form>
 </div>
-<div class="container">
+<!-- <div class="container">
     <form method="POST" action="add">
         <div class="form-group">
             <label>Type Elevator</label>
@@ -44,4 +50,4 @@
         </div>
         <button type="submit" class="btn btn-default">Submit</button>
     </form>
-</div>
+</div> -->
