--- a/src/app/addresses/address-list/address-list.component.css
+++ b/src/app/addresses/address-list/address-list.component.css
@@ -6,3 +6,9 @@ mat-spinner {
   margin: auto;
   margin-top: 30px;
 }
+
+mat-form-field {
+  font-size: 14px;
+  width: 100%;
+  padding: 0px 10px;
+}
