--- a/src/app/addresses/address-list/address-list.component.html
+++ b/src/app/addresses/address-list/address-list.component.html
@@ -1,12 +1,16 @@
 <mat-spinner *ngIf="isLoading"></mat-spinner>
-<table mat-table [dataSource]="addresses" class="mat-elevation-z8" *ngIf="!isLoading">
+<mat-form-field>
+    <mat-label>Filter</mat-label>
+    <input matInput (keyup)="applyFilter($event)" placeholder="Ex. ium" #input>
+</mat-form-field>
+<table mat-table [dataSource]="dataSource" class="mat-elevation-z8" *ngIf="!isLoading">
     <!--- Note that these columns can be defined in any order.
         The actual rendered columns are set as a property on the row definition" -->
 
     <!-- Position Column -->
     <ng-container matColumnDef="id">
         <th mat-header-cell *matHeaderCellDef> # </th>
-        <td mat-cell *matCellDef="let element"> </td>
+        <td mat-cell *matCellDef="let element; let i = index;">{{i+1}}</td>
     </ng-container>
 
     <!-- Register Number Column -->
@@ -37,6 +41,40 @@
     <ng-container matColumnDef="elevators">
         <th mat-header-cell *matHeaderCellDef> Elevators </th>
         <td mat-cell *matCellDef="let element"> {{element.numberElevators}} </td>
+    </ng-container>
+
+    <!-- Type Elevator Column -->
+    <ng-container matColumnDef="typeElevator">
+        <th mat-header-cell *matHeaderCellDef> Type Elevator </th>
+        <td mat-cell *matCellDef="let element"> {{element.typeElevator.text}} </td>
+    </ng-container>
+
+    <!-- Max Weight Column -->
+    <ng-container matColumnDef="maxWeight">
+        <th mat-header-cell *matHeaderCellDef> Max Weight </th>
+        <td mat-cell *matCellDef="let element"> {{element.elevator[0].maxWeight}} </td>
+    </ng-container>
+
+    <!-- Velocity Column -->
+    <ng-container matColumnDef="velocity">
+        <th mat-header-cell *matHeaderCellDef> Velocity </th>
+        <td mat-cell *matCellDef="let element"> {{element.elevator[0].velocity}} </td>
+    </ng-container>
+
+    <!-- Ground Floor Column -->
+    <ng-container matColumnDef="gfloor">
+        <th mat-header-cell *matHeaderCellDef> Ground Floor </th>
+        <td mat-cell *matCellDef="let element">
+            <mat-icon>{{element.gfloor ? 'check_circle' : 'cancel'}}</mat-icon>
+        </td>
+    </ng-container>
+
+    <!-- Basement Column -->
+    <ng-container matColumnDef="basement">
+        <th mat-header-cell *matHeaderCellDef> Basement </th>
+        <td mat-cell *matCellDef="let element">
+            <mat-icon>{{element.basement ? 'check_circle' : 'cancel'}}</mat-icon>
+        </td>
     </ng-container>
 
     <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
