--- a/src/app/addresses/address-list/address-list.component.html
+++ b/src/app/addresses/address-list/address-list.component.html
@@ -77,6 +77,16 @@
         </td>
     </ng-container>
 
+    <!-- Basement Column -->
+
+    <ng-container matColumnDef="options">
+        <th mat-header-cell *matHeaderCellDef> </th>
+        <td mat-cell *matCellDef="let element">
+            <button class="button-row" mat-raised-button color="primary" (click)="onUpdate(element._id)">Edit</button>
+            <button class="button-row" mat-raised-button color="warn" (click)="onDelete(element._id)">Delete</button>
+        </td>
+    </ng-container>
+
     <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
     <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
 </table>
